src/objects/zkmulti__FedExSmartPostDetails__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__AncillaryEndorsement__c</fullName>
        <label>Ancillary Endorsement</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Indicia__c</fullName>
        <label>Indicia</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>FedEx_SmartPost_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SmartPost Details</label>
    <nameField>
        <displayFormat>SmartPostDetails-{00000000}</displayFormat>
        <label>SmartPost Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartPost Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>